Set output-file to index

--- a/template.qmd
+++ b/template.qmd
@@ -51,6 +51,7 @@ format:
     code-fold: true
     appendix-cite-as: display
     link-external-newwindow: true
+    output-file: index
   tongji-thesis-pdf:
     keep-tex: true
 
