Prevent pandoc changing names

--- a/_extensions/tongji-thesis/partials/before-body.tex
+++ b/_extensions/tongji-thesis/partials/before-body.tex
@@ -48,6 +48,18 @@
   efunds={$efunds$},    
 }
 
+\ctexset{%
+  chapter/name={第,章},
+  appendixname=附录,
+  contentsname={目录},
+  listfigurename=插图索引,
+  listtablename=表格索引,
+  figurename=图,
+  tablename=表,
+  bibname=参考文献,
+  indexname=索引,
+}
+
 % 定义中英文摘要和关键字
 \begin{cabstract}
 $cabstract$
